# gl-utilities

./: CMakeLists.txt  README.md  gl.utilities.h  gl.utilities.shaders.h  gl.utilities.textures.h  gl.utilities.vertexbuffers.h  glextl_impl.cpp  vbuffer.h
examples/: README.md  glfw-setup.cpp  glfw-setup.h
examples/01-VertexAndColorExample/: program.cpp
examples/02-VertexNormalAndTexcoordExample/: program.cpp
examples/03-VertexNormalTexcoordAndColorExample/: program.cpp
include/: gl-utilities-loaders.h  gl-utilities-shaders.h  gl-utilities-textures.h  gl-utilities-vertexbuffers.h
include/GL/: glextl.h
src/: gl-utilities.cpp  glextloader.h  program.cpp  reading.cpp  writing.cpp
